# LLMs-from-scratch

./: pyproject.toml
ch02/01_main-chapter-code/: ch02.ipynb  dataloader.ipynb  exercise-solutions.ipynb
ch02/02_bonus_bytepair-encoder/: compare-bpe-tiktoken.ipynb
ch02/03_bonus_embedding-vs-matmul/: embeddings-and-linear-layers.ipynb
